--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,10 +1,15 @@
 
-// Fonts
-@import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 
 // Variables
 @import "variables";
+@import "library.select2";
 @import "objects";
 
 // Bootstrap
-@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+//@import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+
+
+@import "component.sidebar";
+@import "module.layout";
+@import "modal";
