--- a/resources/assets/sass/_objects.scss
+++ b/resources/assets/sass/_objects.scss
@@ -1,21 +1,56 @@
 .alert {
-  &--success {
-    background-color: #dff0d8;
-    border-color: #d0e9c6;
-    color: #3c763d;  }
-  &--error {
-    background-color: #f2dede;
+    &--success {
+        background-color: #dff0d8;
+        border-color: #d0e9c6;
+        color: #3c763d;
+    }
+
+    &--error {
+        background-color: #f2dede;
         border-color: #ebcccc;
         color: #a94442;
-  }
-  &--warning {
-    background-color: #fcf8e3;
-    border-color: #faf2cc;
-    color: #8a6d3b;
-  }
-  &--info {
-    background-color: #d9edf7;
+    }
+
+    &--warning {
+        background-color: #fcf8e3;
+        border-color: #faf2cc;
+        color: #8a6d3b;
+    }
+
+    &--info {
+        background-color: #d9edf7;
         border-color: #bcdff1;
         color: #31708f;
-  }
+    }
+}
+
+.status {
+  padding: 0 10px 0 10px;
+height: 20px;
+position: relative;
+font-size: 10px;
+min-width: 86px;
+color: #FFF;
+text-align: left;
+text-transform: uppercase;
+border-radius: 2px;
+    &--paid {
+      @extend .status;
+        background-color: #3c763d;
+    }
+
+    &--draft {
+      @extend .status;
+        background-color: #E24F43;
+    }
+
+    &--sent {
+      @extend .status;
+        background-color: #8a6d3b;
+    }
+
+    &--viewed {
+      @extend .status;
+        background-color: #31708f;
+    }
 }
